--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -1,10 +1,14 @@
 name: CITEST
 
 on:
-  push:
-    branches: [ main ]
-  repository_dispatch:
-    types: [test_result]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 
 jobs:
   builds:
