--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -1,7 +1,12 @@
 name: CITEST
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      build_type:
+        description: 'Build Type'
+        required: true
+        default: 'CI'
 
 jobs:
   builds:
