--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -7,17 +7,15 @@ on:
         description: 'Build Type'
         required: true
         default: 'CI'
+      cool:
+        description: 'Coolness'
+        required: true
+        default: 'no'
 
 jobs:
-  builds:
+  printInputs:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: compile
-        run: |
-          ./gradlew clean jar
+      - run: |
+          echo "Log level: ${{ github.event.inputs.build_type }}"
+          echo "Tags: ${{ github.event.inputs.cool }}"
